fix: remove jcommander dep, fix native image generation, tentative github action